feat: :sparkles: foro-advance

--- a/client/src/styles/components/Foro/foro_card/_foro_card.scss
+++ b/client/src/styles/components/Foro/foro_card/_foro_card.scss
@@ -85,11 +85,15 @@ $standard-font-Urbanis-sans-serif:'Urbanist', sans-serif;
                 width: 28px;
                 margin-right: 5px;
                 margin-left: 5px;
+                cursor: pointer;
+
             }
             .foro_card_buttonComment {
                 width: 25px;
                 margin-right: 5px;
                 margin-left: 5px;
+                cursor: pointer;
+
             }
         }
 
