--- a/client/src/styles/components/Foro/foro_card/_foro_card.scss
+++ b/client/src/styles/components/Foro/foro_card/_foro_card.scss
@@ -14,6 +14,40 @@ $standard-font-Urbanis-sans-serif:'Urbanist', sans-serif;
     border-radius: 5px;
     font-family: $standard-font-Outfit-sans-serif;
     
+    .foro_card_infoCOMMENT {
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+        //background-color: blue;
+
+        .foro_card_CommentPostSide{
+            display: flex;
+            align-items: center;
+
+            img {
+                margin-right: 10px;
+                width: 35px;
+                border-radius: 100%;
+            }
+
+            textarea {
+                width: 100%;
+                //background-color:red;
+            }
+        }
+
+        .foro_card_SubmitCommentSide {
+            margin-top: 10px;
+            margin-right: 5px;
+            display: flex;
+            justify-content: flex-end;
+
+            button {
+
+            }
+        }
+    }
+
 
     .foro_card_authorSide {
         display: flex;
@@ -59,6 +93,7 @@ $standard-font-Urbanis-sans-serif:'Urbanist', sans-serif;
         justify-content: space-between;
         align-items: center;
         margin: 5px 0px;
+        margin-bottom: 10px;
 
         .foro_card_social_Left {
             display: flex;
