--- a/client/src/components/CardBeta/quicklook.css
+++ b/client/src/components/CardBeta/quicklook.css
@@ -16,7 +16,7 @@
   box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
     0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
   padding: 16px;
-  width: 40%;
+  width: 50%;
   height: 40%;
 }
 
@@ -27,43 +27,33 @@
   position: relative;
 }
 
-.slick-slider {
-  max-width: 100%;
-  max-height: 100%;
-}
-.slick-track {
-  display: flex;
-}
-
-.img-wrapper {
-  position: absolute;
-}
-
-.carousel-image {
-  width: 250px;
-  height: 250px;
-  border-radius: 20px;
-  object-fit: scale-down;
-  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
-    0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
-}
-
-.carousel {
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-.slider-container {
-  width: 50%;
-  height: 60%;
+.modal-images {
+  display: column;
+  justify-content: center;
   position: relative;
 }
-.slider-container .slick-prev {
-  z-index: 9999;
+
+.main-image {
+  max-width: 50%;
+
+  height: auto;
+  border: black;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  margin-bottom: 10px;
 }
 
-.slider-container .slick-next {
-  z-index: 9999;
+.thumbnail-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.thumbnail-image {
+  width: 10%;
+  height: auto;
+  margin-right: 10px;
+  cursor: pointer;
 }
 
 .product-details-container {
