--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -17,6 +17,7 @@
 @import './components/Foro/foro_Home/foro_Home';
 @import './components/Foro/foro_card/foro_card';
 @import './components/Foro/foro_createCard/foro_createCard';
+@import './components/Foro/foro_comments/foro_comments';
 
 //! Detail
 @import './components/Detail/detail';
