--- a/client/src/styles/components/Foro/foro_comments/_foro_comments.scss
+++ b/client/src/styles/components/Foro/foro_comments/_foro_comments.scss
@@ -1,25 +1,43 @@
 .comments_Container {
-    background-color: yellow;
+    background-color: rgb(237, 240, 243);
     margin: 5px;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
+    padding: 10px 30px;
+    //box-shadow: 1px 1px 5px 3px rgba(161, 159, 159, 0.3);
 
     .comments_headerDiv {
-
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     .comments_contentDiv {
         word-break: break-all;
+        padding-bottom: 10px;
     }
 
     .comments_buttonsDiv {
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-around;
         align-items: center;
+        margin-top: 10px;
+
         img {
-            width: 20px;
-            margin-left: 5px;
+            width: 25px;
             cursor: pointer;
         }
+
+        .comments_likesIDE {
+            display: flex;
+            cursor: pointer;
+
+            img {
+                width: 20px;
+                margin-right: 5px;
+            }
+        }
+        
     }
 }
