--- a/client/src/styles/components/Foro/foro_comments/_foro_comments.scss
+++ b/client/src/styles/components/Foro/foro_comments/_foro_comments.scss
@@ -1,16 +1,20 @@
 .comments_Container {
     background-color: rgb(237, 240, 243);
+    border: 1px solid rgb(209, 204, 204);
     margin: 5px;
     margin-top: 10px;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
     padding: 10px 30px;
-    //box-shadow: 1px 1px 5px 3px rgba(161, 159, 159, 0.3);
+    box-shadow: 1px 1px 1px 1px rgba(211, 208, 208, 0.3);
 
     .comments_headerDiv {
         margin-top: 10px;
         margin-bottom: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 
     .comments_contentDiv {
@@ -20,24 +24,31 @@
 
     .comments_buttonsDiv {
         display: flex;
-        justify-content: space-around;
+        
         align-items: center;
         margin-top: 10px;
+        //background-color: blue;
 
-        img {
-            width: 25px;
-            cursor: pointer;
-        }
-
-        .comments_likesIDE {
-            display: flex;
-            cursor: pointer;
-
+        .comments_Button_left {
+            //background-color: green;
+            width: 50%;
             img {
-                width: 20px;
-                margin-right: 5px;
+                width: 25px;
+                cursor: pointer;
             }
         }
-        
+
+        .comments_Button_right {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            width: 50%;
+            //background-color: black;
+            img {
+                width: 25px;
+                cursor: pointer;
+                margin-right: 10px;
+            }
+        }
     }
 }
