--- a/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
+++ b/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
@@ -5,7 +5,7 @@
     100vh - $navbar-height - $navbar-height-maring-top -
       $navbar-height-maring-button
   );
-  background-color: rgb(207, 199, 199);
+  background-color: #DAE0E6;
   overflow: hidden;
 
   .foro_posts_container {
