--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -18,6 +18,7 @@
 @import './components/Foro/foro_card/foro_card';
 @import './components/Foro/foro_createCard/foro_createCard';
 @import './components/Foro/foro_comments/foro_comments';
+@import './components/Foro/foro_panelfilter/foro_panelFilter';
 
 //! Detail
 @import './components/Detail/detail';
