--- a/client/src/styles/components/Foro/foro_createCard/_foro_createCard.scss
+++ b/client/src/styles/components/Foro/foro_createCard/_foro_createCard.scss
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: center;
   z-index: 6;
+  
 
   .foro_create_containere {
     display: flex;
@@ -22,7 +23,7 @@
     border-radius: 5px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     padding: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: $standard-font-Outfit-sans-serif;
     z-index: 6;
 
     .foro_create_header {
@@ -47,6 +48,7 @@
         width: 100%;
         margin: 0;
         border: 1px solid black;
+        height: 100px;
 
         &:focus {
           outline: none;
