--- a/client/src/styles/components/Foro/foro_panelfilter/_foro_panelFilter.scss
+++ b/client/src/styles/components/Foro/foro_panelfilter/_foro_panelFilter.scss
@@ -1,6 +1,7 @@
 
 .foro_panelContainer {
     background-color: $standard-color-blue;
+    font-family: $standard-font-Outfit-sans-serif;
     flex-direction: column;
     width: 300px;
     display: flex;
@@ -57,12 +58,47 @@
         }
     }
 
+    .foro_panel_MenuContainer {
+        color: white;
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+        justify-content: space-around;
+
+        .foro_panel_Menu_HomeContainer {
+            cursor: pointer;
+            display: flex;
+            //flex-direction: column;
+            //justify-content: center;
+            align-items: center;
+            border-radius: 5px;
+            
+            transition: all .1s ease-in;
+            overflow: hidden;
+            
+            img {
+                width: 20px;
+                margin: 5px;
+                margin-right: 20px;
+            }
+
+            &:hover {
+                background-color:rgb(17, 22, 54);
+            }
+
+           
+
+        }
+
+        
+    }
+
     .foro_panel_logoContainer {
         display: flex;
         justify-content: center;
         img {
             width: 50px;
-            opacity: .3;
+            
         }
     }
 }
