--- a/client/src/styles/components/ModalFavorites/_modalFavorites.scss
+++ b/client/src/styles/components/ModalFavorites/_modalFavorites.scss
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     width: 60%;
-    min-height: 100px;
+    max-height: 600px;
     background: #fff;
     position: relative;
     border-radius: 5px;
