feat(dashboard-User): :sparkles: users can upload image

--- a/client/src/styles/components/modalUser/_modalUser.scss
+++ b/client/src/styles/components/modalUser/_modalUser.scss
@@ -75,9 +75,11 @@
         .Modal_ProfilePic {
             display: flex;
             justify-content: center;
+            
 
             img {
                 border-radius: 100%;
+                width: 200px;
             }
         }
 
