style(Styles): :lipstick: responsive in the purcharse form

--- a/client/src/styles/components/Checkout/_form.scss
+++ b/client/src/styles/components/Checkout/_form.scss
@@ -43,3 +43,15 @@
     }
   }
 }
+
+@media (max-width: 425px) {
+  .form_container {
+    height: 100vh;
+
+    form {
+      .input {
+        grid-column: span 2;
+      }
+    }
+  }
+}
