style(dashboard-User): :art: Styles Modal User EDIT

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -13,7 +13,7 @@ $dark: #001e24;
 //TODO fonts
 
 $standard-font-Barlow: 'Barlow', sans-serif;
-
+$standard-background: #DAE0E6;
 $standard-font-Josefin-Sans: 'Josefin Sans', sans-serif;
 $standard-font-Poiret-One: 'Poiret One', cursive; // principal title 1
 $standard-font-Quicksand: 'Quicksand', sans-serif; // principal title 2
