--- a/client/src/styles/components/_dashboard_user.scss
+++ b/client/src/styles/components/_dashboard_user.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: $white;
+  background-color: $standard-background;
   font-family: 'Roboto', sans-serif;
   //font-family: 'Courier New', Courier, monospace;
   //margin-top: 10px;
