style(Routes): :sparkles: Added route 404 on invalid path

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -20,6 +20,7 @@
 @import './components/Foro/foro_comments/foro_comments';
 @import './components/ModalFavorites/modalFavorites';
 @import './components/Foro/foro_panelfilter/foro_panelFilter';
+@import './components/page404/page404';
 
 //! Detail
 @import './components/Detail/detail';
