feat(filters): :sparkles: Reset filters button

--- a/client/src/styles/components/_footer.scss
+++ b/client/src/styles/components/_footer.scss
@@ -1,17 +1,21 @@
-.footer_container{
-    background: linear-gradient(to right,rgba(20,33,66,1), rgba(0,0,0))!important;
-    p{
-        display: flex;
-        text-align:end;
-        color:rgb(255, 255, 255);
-    }
+.footer_container {
+  background: linear-gradient(
+    to right,
+    rgba(20, 33, 66, 1),
+    rgba(0, 0, 0)
+  ) !important;
+  p {
+    display: flex;
+    text-align: end;
+    color: rgb(255, 255, 255);
+  }
 }
 
 .footer_text {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .MuiBox-root .MuiPaper-root .MuiToolbar-root {
-    height: $footer-height;
+  height: $footer-height;
 }
