--- a/client/src/styles/components/Detail/_detail.scss
+++ b/client/src/styles/components/Detail/_detail.scss
@@ -8,11 +8,12 @@
   align-items: center;
   gap: $standard-space-between-elements;
 
-  @media only screen and (max-width: $medium-screen) {}
+  @media only screen and (max-width: $medium-screen) {
+  }
 
   .info-pincipal-detail {
     height: 70vh;
-  
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,7 +57,6 @@
             transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86);
           }
         }
-
       }
     }
 
@@ -74,7 +74,7 @@
         border-radius: $standard-border-radius;
         // background: #e0e0e0;
         // box-shadow: 14px 14px 17px #8b8b8b;
-        
+
         img {
           width: 100%;
           height: 100%;
@@ -83,6 +83,58 @@
         }
       }
     }
+    //------------------------> Buttons ADD TO CART
+    .add-car-card-beta {
+      height: 90%;
+      width: 95%;
+      border-radius: 20px;
+      background-color: $standard-color-blue;
+      transition: background-color 0.3s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      //background-color: aqua;
+      @media only screen and (max-width: $medium-screen) {
+        width: 85%;
+        height: 80%;
+        position: relative;
+        bottom: 5%;
+      }
+      @media only screen and (max-width: $small-screen) {
+        top: 1%;
+      }
+
+      &:hover {
+        background-color: $standard-color-blue-green;
+      }
+
+      p {
+        height: 100%;
+        width: 100%;
+        font-size: 1vw;
+        font-family: $standard-font-Urbanis-sans-serif;
+        color: $standard-color-white;
+        font-weight: 500;
+        display: inline-block;
+        text-align: center;
+        vertical-align: middle;
+        padding-top: 1%;
+        // background-color: red;
+
+        @media only screen and (max-width: $medium-screen) {
+          font-size: 0.8vw;
+          position: relative;
+          width: auto;
+          height: auto;
+        }
+        @media only screen and (max-width: $small-screen) {
+          font-size: 6vw;
+        }
+      }
+    }
+
+    //------------------------------------------
 
     .principal-details {
       height: 95%;
@@ -105,7 +157,6 @@
         font-size: 1.1vw;
         background-color: $standard-color-blue-light;
         border-radius: $standard-border-radius;
-
       }
 
       .transaction-details {
@@ -116,6 +167,114 @@
         display: flex;
       }
     }
+  }
+
+  //---------------SHARE BUTTONS
+
+  i {
+    opacity: 0;
+    font-size: 28px;
+    color: #1f1e1e;
+    will-change: transform;
+    -webkit-transform: scale(0.1);
+    transform: scale(0.1);
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+  }
+
+  .social-media-buttons-wrap {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    overflow: hidden;
+    cursor: pointer;
+    width: 240px;
+    height: 72px;
+    background-color: #eeeeed;
+    border-radius: 80px;
+    padding: 0 18px;
+    will-change: transform;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+  }
+
+  .social-media-buttons-wrap:hover {
+    /* transition-delay: .4s; */
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  span {
+    position: absolute;
+    z-index: 99;
+    width: 240px;
+    height: 72px;
+    border-radius: 80px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-size: 20px;
+    text-align: center;
+    line-height: 70px;
+    letter-spacing: 2px;
+    color: #eeeeed;
+    background-color: #1f1e1e;
+    padding: 0 18px;
+    -webkit-transition: all 1.2s ease;
+    transition: all 1.2s ease;
+  }
+
+  .container-share {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 240px;
+    height: 64px;
+    border-radius: 80px;
+  }
+
+  .container-share i:nth-of-type(1) {
+    -webkit-transition-delay: 1.1s;
+    transition-delay: 1.1s;
+  }
+
+  .container-share i:nth-of-type(2) {
+    -webkit-transition-delay: 0.9s;
+    transition-delay: 0.9s;
+  }
+
+  .container-share i:nth-of-type(3) {
+    -webkit-transition-delay: 0.7s;
+    transition-delay: 0.7s;
+  }
+
+  .container-share i:nth-of-type(4) {
+    -webkit-transition-delay: 0.4s;
+    transition-delay: 0.4s;
+  }
+
+  .social-media-buttons-wrap:hover span {
+    -webkit-transition-delay: 0.25s;
+    transition-delay: 0.25s;
+    -webkit-transform: translateX(-280px);
+    transform: translateX(-280px);
+  }
+
+  .social-media-buttons-wrap:hover i {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
   }
 
   //!---------------------------------------------
