--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -14,43 +14,25 @@
 @import './components/Checkout/form';
 @import './components/modalUser/modalUser';
 @import './components/modalCart/modalCart';
+@import './components/page404/page404';
+// Foro
 @import './components/Foro/foro_Home/foro_Home';
 @import './components/Foro/foro_card/foro_card';
 @import './components/Foro/foro_createCard/foro_createCard';
 @import './components/Foro/foro_comments/foro_comments';
 @import './components/ModalFavorites/modalFavorites';
 @import './components/Foro/foro_panelfilter/foro_panelFilter';
-@import './components/page404/page404';
 
-//! Detail
-@import './components/Detail/detail';
-//! FilterPanel
-@import './components/FilterPanel/filterPanel';
-//! NewFilterPanel
-@import './components/FilterPanel/filterPanel2';
-//! FilterBy
-@import './components/FilterBy/filterBy';
-//! NewFilterBy
-@import './components/FilterBy/newFilterBy';
-//! FilterList
-@import './components/FilterList/filterList';
-//! ItemFilter
-@import './components/ItemFilter/itemFilter';
-//! RenderCard
-@import './components/RenderCard/renderCard';
-//! RenderCard
-@import './components/Card2/card2';
-//! Pagination
-@import './components/pagination/pagination'; // screens
-//! BreadCrumb
-@import './components//breadCrumb'; // screens
-//! Shop
+// Shop
 @import './components/Shop/shop';
-//! FilterByRating
+@import './components/FilterPanel/filterPanel2';
+@import './components/ItemFilter/itemFilter';
+@import './components/FilterList/filterList';
+@import './components/Detail/detail';
+@import './components/Card2/card2';
+@import './components/pagination/pagination'; // screens
+@import './components//breadCrumb'; // screens
 @import './components/FilterRating/filterRating';
-//! FilterPrice
 @import './components/FilterPrice/filterPrice';
-//! NewFilterName
 @import './components/FilterName/filterName';
-//! NewFilterCategory
 @import './components/FilterCategory/filterCategory';
