feat(About): :lipstick: component About Added

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -15,6 +15,7 @@
 @import './components/modalUser/modalUser';
 @import './components/modalCart/modalCart';
 @import './components/page404/page404';
+@import './components/About/About';
 // Foro
 @import './components/Foro/foro_Home/foro_Home';
 @import './components/Foro/foro_card/foro_card';
