feat: :sparkles: Footer

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,56 +1,56 @@
 // UI Settings
-@import './base/settings';
+@import "./base/settings";
 
 // Components
-@import './components/navbar';
-@import './components/footer';
-@import './components/home';
-@import './components/carrousel';
-@import './components/dashboard_user';
-@import './components/newsHome';
-@import './components/news/news';
-@import './components/footer';
-@import './components/Checkout/shoppingCart';
-@import './components/Checkout/form';
-@import './components/modalUser/modalUser';
-@import './components/modalCart/modalCart';
-@import './components/Foro/foro_Home/foro_Home';
-@import './components/Foro/foro_card/foro_card';
-@import './components/Foro/foro_createCard/foro_createCard';
-@import './components/Foro/foro_comments/foro_comments';
-@import './components/ModalFavorites/modalFavorites';
-@import './components/Foro/foro_panelfilter/foro_panelFilter';
-@import './components/page404/page404';
+@import "./components/navbar";
+
+@import "./components/home";
+@import "./components/carrousel";
+@import "./components/dashboard_user";
+@import "./components/newsHome";
+@import "./components/news/news";
+@import "./components/Footer/footer";
+@import "./components/Checkout/shoppingCart";
+@import "./components/Checkout/form";
+@import "./components/modalUser/modalUser";
+@import "./components/modalCart/modalCart";
+@import "./components/Foro/foro_Home/foro_Home";
+@import "./components/Foro/foro_card/foro_card";
+@import "./components/Foro/foro_createCard/foro_createCard";
+@import "./components/Foro/foro_comments/foro_comments";
+@import "./components/ModalFavorites/modalFavorites";
+@import "./components/Foro/foro_panelfilter/foro_panelFilter";
+@import "./components/page404/page404";
 
 //! Detail
-@import './components/Detail/detail';
+@import "./components/Detail/detail";
 //! FilterPanel
-@import './components/FilterPanel/filterPanel';
+@import "./components/FilterPanel/filterPanel";
 //! NewFilterPanel
-@import './components/FilterPanel/filterPanel2';
+@import "./components/FilterPanel/filterPanel2";
 //! FilterBy
-@import './components/FilterBy/filterBy';
+@import "./components/FilterBy/filterBy";
 //! NewFilterBy
-@import './components/FilterBy/newFilterBy';
+@import "./components/FilterBy/newFilterBy";
 //! FilterList
-@import './components/FilterList/filterList';
+@import "./components/FilterList/filterList";
 //! ItemFilter
-@import './components/ItemFilter/itemFilter';
+@import "./components/ItemFilter/itemFilter";
 //! RenderCard
-@import './components/RenderCard/renderCard';
+@import "./components/RenderCard/renderCard";
 //! RenderCard
-@import './components/Card2/card2';
+@import "./components/Card2/card2";
 //! Pagination
-@import './components/pagination/pagination'; // screens
+@import "./components/pagination/pagination"; // screens
 //! BreadCrumb
-@import './components//breadCrumb'; // screens
+@import "./components//breadCrumb"; // screens
 //! Shop
-@import './components/Shop/shop';
+@import "./components/Shop/shop";
 //! FilterByRating
-@import './components/FilterRating/filterRating';
+@import "./components/FilterRating/filterRating";
 //! FilterPrice
-@import './components/FilterPrice/filterPrice';
+@import "./components/FilterPrice/filterPrice";
 //! NewFilterName
-@import './components/FilterName/filterName';
+@import "./components/FilterName/filterName";
 //! NewFilterCategory
-@import './components/FilterCategory/filterCategory';
+@import "./components/FilterCategory/filterCategory";
