--- a/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
+++ b/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
@@ -153,5 +153,36 @@
 .foro_post_tags{
   background-color: red;
   display: flex;
-  
+  justify-content: space-evenly;
+  width: 100%;
+  height: 50px;
+  align-items: center;
+  margin-bottom: 20px;
+  word-break: keep-all!important;
+
+}
+
+.foro_post_tag_normal{
+  background-color:#bbd0ff;
+  padding-left: 0!important;
+  font-size: 10px!important;
+  padding: 0!important;
+  margin: 0!important;
+  border-radius: 15px!important;
+  border: 1px solid !important;
+  cursor: pointer;
+
+  word-break: keep-all!important;
+
+
+
+
+
+
+}
+
+.foro_post_tag_selected{
+  background-color: $standard-color-blue;
+  color:white;
+  padding:0
 }
