--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -12,18 +12,18 @@ $dark: #001e24;
 
 //TODO fonts
 
-$standard-font-Barlow: 'Barlow', sans-serif;
-$standard-background: #DAE0E6;
-$standard-font-Josefin-Sans: 'Josefin Sans', sans-serif;
-$standard-font-Poiret-One: 'Poiret One', cursive; // principal title 1
-$standard-font-Quicksand: 'Quicksand', sans-serif; // principal title 2
-$standard-font-Satisfy: 'Satisfy', cursive;
+$standard-font-Barlow: "Barlow", sans-serif;
+$standard-background: #dae0e6;
+$standard-font-Josefin-Sans: "Josefin Sans", sans-serif;
+$standard-font-Poiret-One: "Poiret One", cursive; // principal title 1
+$standard-font-Quicksand: "Quicksand", sans-serif; // principal title 2
+$standard-font-Satisfy: "Satisfy", cursive;
 
-$standard-font-Hanken-Grotesk: 'Hanken Grotesk', sans-serif;
-$standard-font-IBM-Plex-Sans-Arabic: 'IBM Plex Sans Arabic', sans-serif;
-$standard-font-Lexend-Deca-sans-serif: 'Lexend Deca', sans-serif;
-$standard-font-Outfit-sans-serif: 'Outfit', sans-serif;
-$standard-font-Urbanis-sans-serif: 'Urbanist', sans-serif;
+$standard-font-Hanken-Grotesk: "Hanken Grotesk", sans-serif;
+$standard-font-IBM-Plex-Sans-Arabic: "IBM Plex Sans Arabic", sans-serif;
+$standard-font-Lexend-Deca-sans-serif: "Lexend Deca", sans-serif;
+$standard-font-Outfit-sans-serif: "Outfit", sans-serif;
+$standard-font-Urbanis-sans-serif: "Urbanist", sans-serif;
 
 //TODO color palette ( RGB )
 $standard-color-black: rgba(0, 0, 0, 1);
@@ -33,6 +33,7 @@ $standard-color-blue: rgba(20, 33, 66, 1);
 $standard-color-blue-solid-grad: rgba(68, 195, 231, 0.13);
 $standard-color-blue-light: rgba(137, 171, 202, 0.15);
 $standard-color-blue-glass: rgba(20, 33, 66, 0.6);
+$standard-color-blue-glass-mask: rgba(20, 33, 66, 0.5);
 $standard-color-blue-glass-other: rgba(20, 33, 66, 0.3);
 $standard-color-blue-green: rgba(23, 195, 178, 1);
 $standard-color-blue-secundary: rgba(48, 79, 104, 1);
