refactor(admin dashboard): :art: custom hook dashboard admin

--- a/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
+++ b/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
@@ -5,8 +5,7 @@
   flex-direction: column;
 
   img {
-    height: 150px;
-    filter: invert(100%);
+    display: none;
   }
   
   .dashboardAdmin_wrapper {
